<resources>
    <string name="app_name">SpendiDly</string>

    <!--Splash screen stuff that we'll need-->
    <string name="welcome_message">Welcome to\nSpendiDly!</string>
    <string name="app_description">Please enter your credentials</string>

    <!--BottomNav titles-->
    <string name="change_toUserInputFragment">Input</string>
    <string name="change_toResultsFragment">Budget</string>
    <string name="change_toAverageResultsFragment">Avg. Budget</string>

    <string name="confirm_quit">Are you sure you want to leave?</string>
    <string name="ok">Yes</string>

    <!--EditText hints-->
    <string name="enter_age_hint">Age</string>
    <string name="enter_gross_annual_income_hint">Gross annual income</string>
    <string name="enter_household_members_hint">Household members</string>
    <string name="is_homeowner_label">Are you a homeowner?</string>
    <string name="enter_net_annual_income_hint">Net annual income</string>
    <string name="enter_zip_hint">ZIP code</string>

    <!--Results Categories-->
    <string name="substances">Substances</string>
    <string name="alcoholic_beverages">Alcoholic Beverages</string>
    <string name="prescription_drugs">Prescription Drugs</string>
    <string name="tobacco_smoking">Tobacco &amp; Smoking</string>
    <string name="personal">Personal</string>
    <string name="cash_contributions">Cash Contributions</string>
    <string name="education">Education</string>
    <string name="personal_care">Personal Care</string>
    <string name="media">Media</string>
    <string name="celluar_phone_service">Celluar Phone Service</string>
    <string name="residential_phone_services">Residential Phone Services</string>
    <string name="media_hardware_services">Media Hardware &amp; Services</string>
    <string name="insurance">Insurance</string>
    <string name="health_insurance">Health Insurance</string>
    <string name="life_personal_insurance">Life &amp; Personal Insurance</string>
    <string name="vehicle_insurance">Vehicle Insurance</string>
    <string name="services">Services</string>
    <string name="clothing_items_services">Clothing Items &amp; Services</string>
    <string name="fees_admissions">Fees &amp; admissions</string>
    <string name="misc">Miscellaneous</string>
    <string name="bills_savings">Bills/Savings</string>
    <string name="electricity">Electricity</string>
    <string name="water_public_services">Water &amp; Public Services</string>
    <string name="savings">Savings</string>
    <string name="transport">Transport</string>
    <string name="public_other_transport">Public &amp; Other Transportation</string>
    <string name="vehicle_maintenance_repairs">Vehicle Maintenance &amp; Repairs</string>
    <string name="vehicle_purchase_lease">Vehicle Purchase &amp; Lease</string>
    <string name="household">Household</string>
    <string name="home_maintenance_repairs">Home Maintenance &amp; Repairs</string>
    <string name="household_ops">Household Operations</string>
    <string name="housekeeping_supplies">Housekeeping Supplies</string>
    <string name="food_furniture">Food/Furniture</string>
    <string name="food_home">Food (Home)</string>
    <string name="food_out">Food (Out)</string>
    <string name="furniture_appliances">Furniture &amp; Appliances</string>
    <string name="heating_fuel">Heating/Fuel</string>
    <string name="heating_fuels_other">Other Heating Fuels</string>
    <string name="natural_gas">Natural Gas</string>
    <string name="gasoline">Gasoline</string>
    <string name="medical">Medical</string>
    <string name="medical_services">Medical Services</string>
    <string name="medical_supplies">Medical supplies</string>
    <string name="mortgage_debt">Mortgages/Debt</string>
    <string name="mortgage_rent">Mortgage &amp; Rent</string>
    <string name="other_debt">Other Debt Payments</string>
    <string name="other_lodging">Other Lodging</string>
    <string name="other">Other</string>
    <string name="pets">Pets</string>
    <string name="reading">Reading</string>
    <string name="toys_hobbies">Toys &amp; Hobbies</string>

    <!--Misc-->
    <string name="past_demographics">Past Demographics</string>
    <string name="submit_button_hint">Submit &amp; Save</string>

    <string name="empty_api_results">No model found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>