<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--TODO: Add viewmodel bindable properties here-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/userInputConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".views.UserInputFragment">

            <TextView
                android:id="@+id/welcome_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/welcome_message"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/welcome_subtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_description"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/age_input_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_header" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/age_input_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_age_hint"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/gross_annual_income_input_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome_subtitle"
                app:startIconDrawable="@drawable/ic_baseline_child_care_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_age"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:inputType="numberSigned"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:layout_conversion_absoluteHeight="45dp"
                    tools:layout_conversion_absoluteWidth="20dp"
                    tools:layout_editor_absoluteX="4dp"
                    tools:layout_editor_absoluteY="4dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gross_annual_income_input_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_gross_annual_income_hint"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/household_members_input_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/age_input_field"
                app:startIconDrawable="@drawable/ic_baseline_attach_money_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_gross_annual_income"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:inputType="numberSigned"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:layout_conversion_absoluteHeight="45dp"
                    tools:layout_conversion_absoluteWidth="20dp"
                    tools:layout_editor_absoluteX="4dp"
                    tools:layout_editor_absoluteY="4dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/household_members_input_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_gross_annual_income_hint"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/net_annual_income_input_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gross_annual_income_input_field"
                app:startIconDrawable="@drawable/ic_baseline_attach_money_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_household_members"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:inputType="numberSigned"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:layout_conversion_absoluteHeight="45dp"
                    tools:layout_conversion_absoluteWidth="20dp"
                    tools:layout_editor_absoluteX="4dp"
                    tools:layout_editor_absoluteY="4dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/net_annual_income_input_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_gross_annual_income_hint"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/zip_input_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/household_members_input_field"
                app:startIconDrawable="@drawable/ic_baseline_attach_money_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_net_annual_income"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:inputType="numberSigned"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:layout_conversion_absoluteHeight="45dp"
                    tools:layout_conversion_absoluteWidth="20dp"
                    tools:layout_editor_absoluteX="4dp"
                    tools:layout_editor_absoluteY="4dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/zip_input_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_gross_annual_income_hint"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/is_homeowner_switch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/net_annual_income_input_field"
                app:startIconDrawable="@drawable/ic_baseline_attach_money_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_zip"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:inputType="numberSigned"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:layout_conversion_absoluteHeight="45dp"
                    tools:layout_conversion_absoluteWidth="20dp"
                    tools:layout_editor_absoluteX="4dp"
                    tools:layout_editor_absoluteY="4dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/is_homeowner_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_homeowner_label"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/zip_input_field"
                app:layout_constraintBottom_toTopOf="@+id/submit_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/rounded_container"
                android:drawableStart="@drawable/ic_baseline_check_24"
                android:drawableLeft="@drawable/ic_baseline_check_24"
                android:text="@string/submit_button_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/is_homeowner_switch" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>